advanced options when generating yaml from tables